--- a/index.html
+++ b/index.html
@@ -231,15 +231,15 @@ switch(option) {
   case 'PC':
     servicio = 'Reparación de PC';
     texto = `
-      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 24px;">
-        <img src="ServicioTecnico/ReparacionPC.png" alt="Reparación de PC" style="width: 110px; height: 110px; border-radius: 14px; box-shadow: 0 4px 16px #94a3b8;">
+      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 32px;">
+        <img src="ServicioTecnico/ReparacionPC.png" alt="Reparación de PC" style="width: 180px; height: 140px; border-radius: 18px; box-shadow: 0 6px 24px #94a3b8;">
         <h2 style="color: #1e293b; font-weight: 800; font-size: 2.1rem;">Reparación de PC</h2>
       </div>
       <p class="slide-up" style="font-size: 1.15rem;">En nuestro servicio de <strong>Reparación de PC</strong> te ofrecemos una solución integral para cualquier problema que pueda estar afectando el funcionamiento de tu computador, ya sea de escritorio o portátil.</p>
-      <div style="display: flex; gap: 18px; margin: 18px 0;">
-        <img src="ServicioTecnico/Hardware.png" alt="Hardware" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Windows.png" alt="Sistema Operativo" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Virus.png" alt="Virus" style="width: 80px; border-radius: 12px;">
+      <div style="display: flex; gap: 32px; margin: 22px 0;">
+        <img src="ServicioTecnico/Hardware.png" alt="Hardware" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Windows.png" alt="Sistema Operativo" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Virus.png" alt="Virus" style="width: 120px; height: 90px; border-radius: 14px;">
       </div>
       <ul style="color: #334155; font-size: 1.07rem;">
         <li>Revisión y prueba de componentes físicos (disco duro, memoria RAM, placa madre, procesador, fuente de poder, entre otros).</li>
@@ -266,15 +266,15 @@ switch(option) {
   case 'Laptop':
     servicio = 'Servicio a Laptops';
     texto = `
-      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 24px;">
-        <img src="ServicioTecnico/Laptop.png" alt="Servicio a Laptops" style="width: 110px; height: 110px; border-radius: 14px; box-shadow: 0 4px 16px #94a3b8;">
+      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 32px;">
+        <img src="ServicioTecnico/Laptop.png" alt="Servicio a Laptops" style="width: 180px; height: 140px; border-radius: 18px; box-shadow: 0 6px 24px #94a3b8;">
         <h2 style="color: #0f172a; font-weight: 800; font-size: 2.1rem;">Servicio a Laptops</h2>
       </div>
       <p class="slide-up" style="font-size: 1.15rem;">En <strong>JS Technology</strong>, entendemos que tu laptop es una herramienta esencial para tu vida diaria, ya sea para estudiar, trabajar o mantenerte conectado con el mundo. Por eso, ofrecemos un <strong>servicio técnico integral para laptops</strong> que combina calidad, eficiencia y atención personalizada a un precio accesible.</p>
-      <div style="display: flex; gap: 18px; margin: 18px 0;">
-        <img src="ServicioTecnico/Pantalla.png" alt="Reparación pantalla" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Teclado.png" alt="Teclado" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Bateria.png" alt="Batería" style="width: 80px; border-radius: 12px;">
+      <div style="display: flex; gap: 32px; margin: 22px 0;">
+        <img src="ServicioTecnico/Pantalla.png" alt="Reparación pantalla" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Teclado.png" alt="Teclado" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Bateria.png" alt="Batería" style="width: 120px; height: 90px; border-radius: 14px;">
       </div>
       <ul style="color: #334155; font-size: 1.07rem;">
         <li><strong>Reparación de pantallas:</strong> Reemplazo de pantallas dañadas o con fallos de visualización, utilizando repuestos de alta calidad.</li>
@@ -301,14 +301,14 @@ switch(option) {
   case 'Formateo':
     servicio = 'Formateo de PC';
     texto = `
-      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 24px;">
-        <img src="ServicioTecnico/Formateo.png" alt="Formateo de PC" style="width: 110px; height: 110px; border-radius: 14px; box-shadow: 0 4px 16px #fbbf24;">
+      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 32px;">
+        <img src="ServicioTecnico/Formateo.png" alt="Formateo de PC" style="width: 180px; height: 140px; border-radius: 18px; box-shadow: 0 6px 24px #fbbf24;">
         <h2 style="color: #78350f; font-weight: 800; font-size: 2.1rem;">Formateo de PC</h2>
       </div>
       <p class="slide-up" style="font-size: 1.15rem;">¿Tu computador está lento, presenta errores frecuentes o necesita una limpieza total del sistema? En <strong>JS Technology</strong> ofrecemos un <strong>formateo profesional de PC</strong> que garantiza velocidad, estabilidad y seguridad para tu equipo, cuidando al máximo tu información personal.</p>
-      <div style="display: flex; gap: 18px; margin: 18px 0;">
-        <img src="ServicioTecnico/Backup.png" alt="Respaldo" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/ReparacionPC.png" alt="Reinstalación" style="width: 80px; border-radius: 12px;">
+      <div style="display: flex; gap: 32px; margin: 22px 0;">
+        <img src="ServicioTecnico/Backup.png" alt="Respaldo" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/ReparacionPC.png" alt="Reinstalación" style="width: 120px; height: 90px; border-radius: 14px;">
       </div>
       <ul style="color: #92400e; font-size: 1.07rem;">
         <li><strong>Respaldo de información personal:</strong> Hacemos copia segura de documentos, fotos, videos y demás archivos importantes antes de formatear.</li>
@@ -336,15 +336,15 @@ switch(option) {
   case 'Software':
     servicio = 'Instalación de Software';
     texto = `
-      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 24px;">
-        <img src="ServicioTecnico/Software.png" alt="Instalación de Software" style="width: 110px; height: 110px; border-radius: 14px; box-shadow: 0 4px 16px #a78bfa;">
+      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 32px;">
+        <img src="ServicioTecnico/Software.png" alt="Instalación de Software" style="width: 180px; height: 140px; border-radius: 18px; box-shadow: 0 6px 24px #a78bfa;">
         <h2 style="color: #4c1d95; font-weight: 800; font-size: 2.1rem;">Instalación de Software</h2>
       </div>
       <p class="slide-up" style="font-size: 1.15rem;">En <strong>JS Technology</strong>, ofrecemos un servicio profesional de <strong>instalación de software</strong> para que tu computador esté equipado con las herramientas necesarias para trabajar, estudiar o navegar con total seguridad y eficiencia.</p>
-      <div style="display: flex; gap: 18px; margin: 18px 0;">
-        <img src="ServicioTecnico/Oficce.png" alt="Office" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Antivirus.png" alt="Antivirus" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Multimedia.png" alt="Multimedia" style="width: 80px; border-radius: 12px;">
+      <div style="display: flex; gap: 32px; margin: 22px 0;">
+        <img src="ServicioTecnico/Oficce.png" alt="Office" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Antivirus.png" alt="Antivirus" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Multimedia.png" alt="Multimedia" style="width: 120px; height: 90px; border-radius: 14px;">
       </div>
       <ul style="color: #4c1d95; font-size: 1.07rem;">
         <li><strong>Instalación de sistemas operativos:</strong> Windows 7, 10, 11 o distribuciones de Linux, según la compatibilidad del equipo y la preferencia del cliente.</li>
@@ -371,15 +371,15 @@ switch(option) {
   case 'Optimizacion':
     servicio = 'Optimización';
     texto = `
-      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 24px;">
-        <img src="ServicioTecnico/Optimizacion.png" alt="Optimización" style="width: 110px; height: 110px; border-radius: 14px; box-shadow: 0 4px 16px #f472b6;">
+      <div class="servicio-header fade-in" style="display: flex; align-items: center; gap: 32px;">
+        <img src="ServicioTecnico/Optimizacion.png" alt="Optimización" style="width: 180px; height: 140px; border-radius: 18px; box-shadow: 0 6px 24px #f472b6;">
         <h2 style="color: #be185d; font-weight: 800; font-size: 2.1rem;">Optimización</h2>
       </div>
       <p class="slide-up" style="font-size: 1.15rem;">¿Tu computador se ha vuelto lento o tarda en ejecutar tareas básicas? En <strong>JS Technology</strong> te ofrecemos un servicio completo de <strong>optimización de equipos</strong> para mejorar significativamente el rendimiento sin perder tus archivos ni programas.</p>
-      <div style="display: flex; gap: 18px; margin: 18px 0;">
-        <img src="ServicioTecnico/Performance.png" alt="Rendimiento" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Malware.png" alt="Malware" style="width: 80px; border-radius: 12px;">
-        <img src="ServicioTecnico/Hardware2.png" alt="Check hardware" style="width: 80px; border-radius: 12px;">
+      <div style="display: flex; gap: 32px; margin: 22px 0;">
+        <img src="ServicioTecnico/Performance.png" alt="Rendimiento" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Malware.png" alt="Malware" style="width: 120px; height: 90px; border-radius: 14px;">
+        <img src="ServicioTecnico/Hardware2.png" alt="Check hardware" style="width: 120px; height: 90px; border-radius: 14px;">
       </div>
       <ul style="color: #be185d; font-size: 1.07rem;">
         <li><strong>Limpieza del sistema operativo:</strong> Eliminamos archivos temporales, residuos de programas y registros innecesarios que afectan la velocidad del equipo.</li>
