--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
       align-items: center;
       margin-bottom: 5px;
     }
-    .logo-img {
-      width: 28px;
-      height: 28px;
-      background-image: url("ImgesJS/jstech_logo.jpg");
+     .logo-img {
+      width: 38px;
+      height: 38px;
+      background-image: url("ImgesJS/jstech_logo.png");
       background-size: cover;
       background-position: center;
       margin-right: 8px;
